fix(button): restore ability for button text to wrap
Remove the CSS that prevents the text in the button from wrapping.

The guidelines for the component say "When the button text is too long
for the horizontal space available, it wraps to form another line."

--- a/components/button/index.css
+++ b/components/button/index.css
@@ -126,6 +126,7 @@ governing permissions and limitations under the License.
       var(--mod-button-edge-to-text, var(--spectrum-button-edge-to-text))
     );
     color: inherit;
+    flex-shrink: 0;
   }
 
   /* correct focus indicator radius for t-shirt sizing */
@@ -156,7 +157,6 @@ a.spectrum-Button {
   @inherit: %spectrum-ButtonLabel;
   padding-block-start: calc(var(--mod-button-top-to-text, var(--spectrum-button-top-to-text)) - var(--mod-button-border-width, var(--spectrum-button-border-width)));
   padding-block-end: calc(var(--mod-button-bottom-to-text, var(--spectrum-button-bottom-to-text)) - var(--mod-button-border-width, var(--spectrum-button-border-width)));
-  white-space: nowrap;
   line-height: var(--mod-button-line-height, var(--spectrum-button-line-height));
   align-self: start;
 }
